--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ tagline: A Jekyll template for course websites
 description: A modern, highly customizable, responsive Jekyll template for course websites
 author: Kevin Lin
 baseurl: '/geospat-IBC-2024' # the subpath of your site, e.g. /blog
-url: 'https://abhirupdatta.github.io/' # the base hostname & protocol for your site, e.g. http://example.com
+url: 'https://abhirupdatta.github.io' # the base hostname & protocol for your site, e.g. http://example.com
 exclude: ["Gemfile", "Gemfile.lock", "LICENSE"]
 
 # Theme settings
