--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ tagline: A Jekyll template for course websites
 description: A modern, highly customizable, responsive Jekyll template for course websites
 author: Kevin Lin
 baseurl: '/geospat-IBC-2024' # the subpath of your site, e.g. /blog
-url: 'https://abhirupdatta.github.io' # the base hostname & protocol for your site, e.g. http://example.com
+url: 'https://wentaozhan1998.github.io' # the base hostname & protocol for your site, e.g. http://example.com
 exclude: ["Gemfile", "Gemfile.lock", "LICENSE"]
 
 # Theme settings
@@ -30,6 +30,8 @@ permalink: pretty
 aux_links:
   Abhirup Datta:
     - 'https://abhirupdatta.github.io'
+  Wentao Zhan:
+    - 'https://wentaozhan1998.github.io'
 footer_content:
 
 # Collections for website data
