--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@
 # you will see them accessed via {{ site.title }}, {{ site.github_repo }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Geospatial Short Course
-tagline: A Jekyll template for course websites
-description: A modern, highly customizable, responsive Jekyll template for course websites
+title: Geospatial Short Course (SC06)
+tagline: SC06 IBC2024
+description: Statistical and Machine Learning for Big Geospatial Data.
 author: Abhirup Datta
 baseurl: '/Test' # the subpath of your site, e.g. /blog
 url: 'https://wentaozhan1998.github.io' # the base hostname & protocol for your site, e.g. http://example.com
